prevent the tutorial button css from bleeding into share dialog at small sizes (#11051)

--- a/react-common/styles/share/share.less
+++ b/react-common/styles/share/share.less
@@ -348,12 +348,6 @@
     .gif-recorder-content .thumbnail-controls {
         padding: 0 2rem;
     }
-
-    .common-button.square-button.embed.gray.mobile-portrait-hidden {
-        // important is need for color to override semantic ui's use of important
-        color: var(--pxt-neutral-foreground2) !important;
-        background: var(--pxt-neutral-background2);
-    }
 }
 
 @media @mobileAndBelow {
