--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -805,7 +805,7 @@
         min-width: 30rem;
     }
 
-    .common-button.square-button {
+    .tutorial-container .common-button.square-button {
         margin: 0;
         border: unset;
         color: @white !important;
